--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "mouadh bouneb",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
