--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "description": "handel users with permission",
   "main": "server",
   "scripts": {
-    "test": "npm test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start": "node dist/main.js",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register ./src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "seed": "ts-node -r tsconfig-paths/register ./src/config/seed.ts"
   },
   "author": "mouadh bouneb",
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^24.3.0",
     "dotenv": "^17.2.1",
+    "jest": "^30.1.2",
+    "mongodb-memory-server": "^10.2.0",
     "nodemon": "^3.1.10",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
@@ -32,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "reflect-metadata": "^0.1.14",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.5"
   }
 }
