--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^24.3.0",
     "dotenv": "^17.2.1",
     "jest": "^30.1.2",
@@ -34,12 +33,14 @@
   "dependencies": {
     "@automapper/classes": "^8.8.1",
     "@automapper/core": "^8.8.1",
+    "@types/mongoose": "^5.11.97",
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "reflect-metadata": "^0.1.14",
     "uuid": "^11.1.0",
+    "winston": "^3.15.0",
     "zod": "^4.1.5"
   }
 }
